[gd_scene load_steps=21 format=4 uid="uid://dsd4k1sulk80x"]

[ext_resource type="Script" path="res://scripts/game.gd" id="1_6bp64"]
[ext_resource type="Texture2D" uid="uid://c4mg3n16gr2a7" path="res://assets/collectibles-tilemap.png" id="1_21xkr"]
[ext_resource type="Script" uid="uid://db8px7j78l74f" path="res://scripts/cam.gd" id="1_ynf5e"]
[ext_resource type="PackedScene" uid="uid://bu2xnaiq3ifd6" path="res://scenes/processes/game/map.tscn" id="2_wsu2k"]
[ext_resource type="FontFile" uid="uid://llyue0qrvm3r" path="res://assets/fonts/ProggyClean.ttf" id="3_kry3j"]
[ext_resource type="PackedScene" uid="uid://djd5uuxrh164d" path="res://objects/player/player.tscn" id="5_xf1xs"]
[ext_resource type="Script" uid="uid://cnb0boxepf8j1" path="res://scripts/mace_chain.gd" id="7_6bp64"]
[ext_resource type="Script" uid="uid://dxhlmw6xjfhaw" path="res://scripts/win.gd" id="12_fdnlq"]
[ext_resource type="Texture2D" uid="uid://cyshaitips887" path="res://assets/maceartifact.png" id="13_0ld40"]
[ext_resource type="Texture2D" uid="uid://tj3y8eqp11a4" path="res://assets/spark.png" id="14_gqmmt"]
[ext_resource type="Script" uid="uid://c41grkl4jef1" path="res://scripts/sound_manager.gd" id="14_qv02h"]
[ext_resource type="PackedScene" uid="uid://b2fcsh0tiky6b" path="res://objects/mace/mace.tscn" id="15_wsu2k"]
[ext_resource type="AudioStream" uid="uid://dp3ewhba42j2s" path="res://assets/music/rushed.ogg" id="16_k12tt"]
[ext_resource type="Texture2D" uid="uid://bpegee8ggqnhy" path="res://assets/maceybg.png" id="17_muem4"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_6bp64"]
texture = ExtResource("1_21xkr")
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_344ge"]
sources/1 = SubResource("TileSetAtlasSource_6bp64")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kry3j"]
size = Vector2(32, 32)

[sub_resource type="Curve" id="Curve_yc10j"]
_data = [Vector2(0.244318, 0), 0.0, 7.10112, 0, 0, Vector2(0.818182, 0.910112), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="LabelSettings" id="LabelSettings_6bp64"]
font = ExtResource("3_kry3j")

[sub_resource type="Gradient" id="Gradient_jbj1t"]
offsets = PackedFloat32Array(0.0266667, 0.166667, 0.846667, 1)
colors = PackedColorArray(0, 0.882353, 0.541176, 0, 0, 0.882353, 0.541176, 1, 1, 1, 1, 1, 1, 1, 1, 0)

[node name="Game" type="Node2D" groups=["game"]]
texture_filter = 1
script = ExtResource("1_6bp64")

[node name="Map" parent="." instance=ExtResource("2_wsu2k")]

[node name="CollectiblesTileMap" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAD///z/AQAAAAAAAAAEAPj/AQAAAAAAAAAEAAEAAQAAAAAAAAD5/wwAAQAAAAAAAAD6/wwAAQAAAAAAAAD6/w0AAQAAAAAAAAD7/w0AAQAAAAAAAAAPAAQAAQAAAAAAAAAWAPH/AQAAAAAAAAAXAPH/AQAAAAAAAAAYAPH/AQAAAAAAAAAZAPH/AQAAAAAAAAAZAPL/AQAAAAAAAAAYAPL/AQAAAAAAAAAXAPL/AQAAAAAAAAAWAPL/AQAAAAAAAAAZAAkAAQAAAAAAAAAaAAkAAQAAAAAAAAAbAAkAAQAAAAAAAAAbAAoAAQAAAAAAAAAaAAoAAQAAAAAAAAAZAAoAAQAAAAAAAAAlAAQAAQAAAAAAAAAlAAYAAQAAAAAAAAA2APX/AQAAAAAAAABAAPT/AQAAAAAAAABAAPX/AQAAAAAAAAAzAAIAAQAAAAAAAAAzAAMAAQAAAAAAAAAyAAgAAQAAAAAAAAAxAAgAAQAAAAAAAAAxAAkAAQAAAAAAAAAwAPv/AQAAAAAAAAAgAP3/AQAAAAAAAADw/+3/AQAAAAAAAADx/+3/AQAAAAAAAAD6//X/AQAAAAAAAAD6//b/AQAAAAAAAAD7//b/AQAAAAAAAAD7//X/AQAAAAAAAADa/wMAAQAAAAAAAADb/wMAAQAAAAAAAADb/wQAAQAAAAAAAADa/wQAAQAAAAAAAADZ//H/AQAAAAAAAADk//j/AQAAAAAAAADe//H/AQAAAAAAAADe//L/AQAAAAAAAADd//L/AQAAAAAAAADd//H/AQAAAAAAAADX/+n/AQAAAAAAAADW/+n/AQAAAAAAAADp/wcAAQAAAAAAAADp/wgAAQAAAAAAAADq/wgAAQAAAAAAAADq/wcAAQAAAAAAAABIAPz/AQAAAAAAAABQAAMAAQAAAAAAAABWAAMAAQAAAAAAAABcAAIAAQAAAAAAAABjAAEAAQAAAAAAAABYAPn/AQAAAAAAAAD7//T/AQAAAAAAAAD6//T/AQAAAAAAAAD5//T/AQAAAAAAAAD4//T/AQAAAAAAAAD7//P/AQAAAAAAAAD6//P/AQAAAAAAAAD5//P/AQAAAAAAAAD4//P/AQAAAAAAAADY/+n/AQAAAAAAAADo/wcAAQAAAAAAAADo/wgAAQAAAAAAAADn/wgAAQAAAAAAAADn/wcAAQAAAAAAAAAWAPP/AQAAAAAAAAAXAPP/AQAAAAAAAAAYAPP/AQAAAAAAAAAZAPP/AQAAAAAAAAAVAPH/AQAAAAAAAAAVAPL/AQAAAAAAAAAVAPP/AQAAAAAAAADL//7/AQAAAAAAAADN//j/AQAAAAAAAADT/wMAAQAAAAAAAADC/wIAAQAAAAAAAAC7//7/AQAAAAAAAAC7////AQAAAAAAAAC6////AQAAAAAAAAC6//7/AQAAAAAAAAC///T/AQAAAAAAAAAtAPz/AQAAAAAAAAAtAPv/AQAAAAAAAAA=")
tile_set = SubResource("TileSet_344ge")

[node name="Camera2D" type="Camera2D" parent="."]
scale = Vector2(0.5, 0.5)
zoom = Vector2(2, 2)
script = ExtResource("1_ynf5e")

[node name="Player" parent="." instance=ExtResource("5_xf1xs")]
unique_name_in_owner = true
position = Vector2(-1656, -128)

[node name="WinArea" type="Area2D" parent="."]
position = Vector2(1688, -176)
collision_mask = 2
script = ExtResource("12_fdnlq")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="WinArea"]
shape = SubResource("RectangleShape2D_kry3j")

[node name="MeshInstance2D" type="Sprite2D" parent="WinArea"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("13_0ld40")

[node name="CPUParticles2D" type="CPUParticles2D" parent="WinArea"]
amount = 2
texture = ExtResource("14_gqmmt")
lifetime = 0.3
speed_scale = 0.7
emission_shape = 3
emission_rect_extents = Vector2(16, 16)
direction = Vector2(0, 0)
spread = 180.0
gravity = Vector2(0, -0.9)
scale_amount_min = 0.2
scale_amount_max = 0.75
scale_amount_curve = SubResource("Curve_yc10j")

[node name="Label" type="Label" parent="WinArea"]
visible = false
offset_left = -16.0
offset_top = -16.0
offset_right = 24.0
offset_bottom = 7.0
text = "Win"
label_settings = SubResource("LabelSettings_6bp64")

[node name="MaceChain" type="Line2D" parent="." node_paths=PackedStringArray("mace", "tilemap", "target")]
width = 2.0
gradient = SubResource("Gradient_jbj1t")
joint_mode = 2
script = ExtResource("7_6bp64")
mace = NodePath("../Mace")
tilemap = NodePath("../Map")
target = NodePath("../Player")

[node name="Mace" parent="." instance=ExtResource("15_wsu2k")]
position = Vector2(-1784, -192)

[node name="Music" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("16_k12tt")
volume_db = -15.0
autoplay = true

[node name="BG" type="CanvasLayer" parent="."]
layer = -1
offset = Vector2(480, 360)
transform = Transform2D(1, 0, 0, 1, 480, 360)

[node name="Sprite2D" type="Sprite2D" parent="BG"]
self_modulate = Color(0.4, 0.4, 0.4, 1)
scale = Vector2(3, 3)
texture = ExtResource("17_muem4")

[node name="SoundManager" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("14_qv02h")

[connection signal="completed_loop" from="MaceChain" to="MaceChain" method="_on_completed_loop"]
